# rust_wasm_canvas_game

./: .gitignore  Cargo.toml  README.md  build_and_run.ps1  build_and_run.sh  index.js
src/: canvas.rs  canvas2d.rs  game.rs  lib.rs  player.rs
