[package]
name = "biubiu"
version = "0.0.0"
authors = ["Tiago <xernobyl@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "*"
wasm-bindgen = "*"
rand = "*"
cgmath = "*"

[dependencies.web-sys]
version = "*"
features = [
	'CssStyleDeclaration',
	'Document',
	'Element',
	'FocusEvent',
	'HtmlCanvasElement',
	'HtmlElement',
	'KeyboardEvent',
	'Node',
	'Performance',
	'UiEvent',
	'CanvasRenderingContext2d',
	'Window',
]
